fix: update simple sidebar overflow issue & update the pages to contain a static card that helps with overflow issues

--- a/src/components/Layout/LayoutTypes/SimpleSideBar.module.css
+++ b/src/components/Layout/LayoutTypes/SimpleSideBar.module.css
@@ -10,6 +10,7 @@
     width: 9rem;
 }
 .navbarMain {
+    overflow-y: auto;
     flex: 1;
 }
 
@@ -22,6 +23,7 @@
 }
 
 .footer {
+    bottom: 20px;
     padding-top: var(--mantine-spacing-md);
     margin-top: var(--mantine-spacing-md);
     border-top: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
